@@ -52,6 +52,7 @@ JavaScriptCore Bakefile project file.
         <cxx-exceptions>on</cxx-exceptions>
         <define>BUILDING_WX__=1</define>
         <define>ENABLE_DOM_STORAGE</define>
+        <define>JS_NO_EXPORT</define>
         <define>
             $(substituteFromDict(DEBUG,{'1':'','0':'NDEBUG'}))
         </define>
