@@ -1,3 +1,11 @@
+2009-12-28  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Maciej Stachowiak.
+
+        Cleanup of #define JS_EXPORT.
+
+        * API/JSBase.h:
+
 2009-12-27  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Adam Barth.
